--- a/flight/templates/flights/flight.html
+++ b/flight/templates/flights/flight.html
@@ -31,5 +31,5 @@
         <input type="submit">
     </form>
 <br>
-    <a href="{%url 'index'%}"> back to flight list </a>
+    <a href="{%url 'indexx' %}"> back to flight list </a>
 {% endblock %}
