--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,4 +10,5 @@
         <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="password">
         <input type="submit" value="login">
+    </form>
 {% endblock %}
