--- a/flight/templates/flights/layout.html
+++ b/flight/templates/flights/layout.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+{% load static %}
+
 <html lang = "en">
     <head> 
         <title>Flights</title>
+        <link rel = "stylesheet", href = "{% static 'css/flight.css' %}">
     </head>
     <body>
         {% block body %}
