--- a/flight/templates/flights/index.html
+++ b/flight/templates/flights/index.html
@@ -1,16 +1,37 @@
 {% extends "flights/layout.html" %}
+{% load static %}
 
 {% block body %}
-<h1>Flights:</h1><br>
-<h4>Flight no.: Origin to Destination (time in minutes)</h4>
-<ul>
-{% for flight in flights %}
-    <li>
-        <a href="{%url 'flight' flight.id %}">
-        Flight {{ flight.id }}: {{ flight.origin}} to {{ flight.destination }} ({{flight.duration}})</a>
-    </li>
-        {% empty %}
-    <li> Flight empty</li>
-    {% endfor %}
-</ul>
-{% endblock body %}
+    <div class="container">
+        <div class="flight-details" style="padding-bottom: 0px">
+            <h1>Flights:</h1>
+        </div>
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Flight No.</th>
+                    <th>Origin</th>
+                    <th>Destination</th>
+                    <th>Duration</th>
+                    <th>Details</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for flight in flights %}
+                    <tr>
+                        <td>{{ flight.id }}</td>
+                        <td>{{ flight.origin }}</td>
+                        <td>{{ flight.destination }}</td>
+                        <td>{{ flight.duration }}</td>
+                        <td><a href="{% url 'flight' flight.id %}">View</a></td>
+                    </tr>
+                {% empty %}
+                    <tr>
+                        <td colspan="5">No flights available.</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endblock %}
