--- a/flight/templates/flights/flight.html
+++ b/flight/templates/flights/flight.html
@@ -35,6 +35,6 @@
             <button type="submit" class="add-passenger-btn">Add Passenger</button>
         </form>
 
-        <a href="{% url 'indexx' %}" class="back-btn">Back to Flight List</a>
+        <a href="{% url 'index' %}" class="back-btn">Back to Flight List</a>
     </div>
 {% endblock %}
