--- a/users/templates/users/user.html
+++ b/users/templates/users/user.html
@@ -9,5 +9,6 @@
     </ul>
 
     <a href="{% url 'logout' %}">Log Out</a>
+    <a href="{% url 'index' %}" class="back-btn">Back to Flight List</a>
     
 {% endblock %}
