--- a/flight/templates/flights/index.html
+++ b/flight/templates/flights/index.html
@@ -2,36 +2,38 @@
 {% load static %}
 
 {% block body %}
-    <div class="container">
+    <div class="container" style="text-align: center">
         <div class="flight-details" style="padding-bottom: 0px">
             <h1>Flights:</h1>
         </div>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Flight No.</th>
-                    <th>Origin</th>
-                    <th>Destination</th>
-                    <th>Duration</th>
-                    <th>Details</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for flight in flights %}
+        <div class = "table-container" style="width: 100%; border-collapse: collapse; margin: 0 auto; text-align: center">
+            <table>
+                <thead>
                     <tr>
-                        <td>{{ flight.id }}</td>
-                        <td>{{ flight.origin }}</td>
-                        <td>{{ flight.destination }}</td>
-                        <td>{{ flight.duration }}</td>
-                        <td><a href="{% url 'flight' flight.id %}">View</a></td>
+                        <th>Flight No.</th>
+                        <th>Origin</th>
+                        <th>Destination</th>
+                        <th>Duration</th>
+                        <th>Details</th>
                     </tr>
-                {% empty %}
-                    <tr>
-                        <td colspan="5">No flights available.</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    {% for flight in flights %}
+                        <tr>
+                            <td>{{ flight.id }}</td>
+                            <td>{{ flight.origin }}</td>
+                            <td>{{ flight.destination }}</td>
+                            <td>{{ flight.duration }}</td>
+                            <td><a href="{% url 'flight' flight.id %}">View</a></td>
+                        </tr>
+                    {% empty %}
+                        <tr>
+                            <td colspan="5">No flights available.</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 {% endblock %}
