--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,4 +11,6 @@
         <input type="password" name="password" placeholder="password">
         <input type="submit" value="login">
     </form>
+
+    <a href="{% url 'index' %}" class="back-btn">Back to Flight List</a>
 {% endblock %}
