--- a/flight/templates/flights/index.html
+++ b/flight/templates/flights/index.html
@@ -7,9 +7,12 @@
             <h1>Flights:</h1>
         </div>
 
+
+
+<!--Table for flights(Origin, Destination and Duration)-->
         <div class = "table-container" style="width: 100%; border-collapse: collapse; margin: 0 auto; text-align: center">
             <table>
-                <thead>
+                <thead style="text-decoration: underline">
                     <tr>
                         <th>Flight No.</th>
                         <th>Origin</th>
