Create New Passenger using UI

--- a/flight/templates/flights/index.html
+++ b/flight/templates/flights/index.html
@@ -38,5 +38,14 @@
                 </tbody>
             </table>
         </div>
+        <div>
+            <form method="post" action="{% url 'create_passenger' %}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="create-passenger-btn">Create Passenger</button>
+            </form>
+
+        </div>
     </div>
+
 {% endblock %}
