--- a/flight/templates/flights/index.html
+++ b/flight/templates/flights/index.html
@@ -17,7 +17,7 @@
                         <th>Flight No.</th>
                         <th>Origin</th>
                         <th>Destination</th>
-                        <th>Duration</th>
+                        <th>Duration(min)</th>
                         <th>Details</th>
                     </tr>
                 </thead>
