--- a/static/css/flight.css
+++ b/static/css/flight.css
@@ -56,7 +56,7 @@
     background: #c82333;
 }
 
-.add-passenger-btn, .back-btn, .create-passenger-btn {
+.add-passenger-btn, .back-btn, .create-passenger-btn, .btn, .status{
     display: block;
     width: 100%;
     padding: 10px;
@@ -69,7 +69,7 @@
     margin-top: 10px;
 }
 
-.add-passenger-btn:hover, .back-btn:hover {
+.add-passenger-btn:hover, .back-btn:hover, .create-passenger-btn:hover, .btn:hover, .status:hover,  {
     background: #218838;
 }
 
