--- a/flight/templates/flights/index.html
+++ b/flight/templates/flights/index.html
@@ -18,6 +18,7 @@
                         <th>Origin</th>
                         <th>Destination</th>
                         <th>Duration(min)</th>
+                        <th>Status</th>
                         <th>Details</th>
                     </tr>
                 </thead>
@@ -28,6 +29,7 @@
                             <td>{{ flight.origin }}</td>
                             <td>{{ flight.destination }}</td>
                             <td>{{ flight.duration }}</td>
+                            <td>{{ flight.status }}</td>
                             <td><a href="{% url 'flight' flight.id %}">View</a></td>
                         </tr>
                     {% empty %}
