--- a/flight/templates/flights/flight.html
+++ b/flight/templates/flights/flight.html
@@ -2,7 +2,7 @@
 {% load custom_filters %}
 
 {% block body %}
-    <div class="container">
+    <div class="container" style="margin-top: 20px">
 
 <!--Flight Details-->
         <div class="flight-details">
