--- a/flight/templates/flights/index.html
+++ b/flight/templates/flights/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
-    <div class="container" style="text-align: center">
+    <div class="container" style="margin-top: 20px; text-align: center">
         <div class="flight-details" style="padding-bottom: 0px">
             <h1>Flights:</h1>
         </div>
