--- a/flight/templates/flights/layout.html
+++ b/flight/templates/flights/layout.html
@@ -4,8 +4,52 @@
     <head> 
         <title>Flights</title>
         <link rel = "stylesheet", href = "{% static 'css/flight.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body style="background-color: #53b7f1">
+        <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg bg-body-tertiary" style="margin-top: 5px">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{% url 'start_page' %}">Airlines</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <!-- Link to Home page -->
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'start_page' %}">Home</a>
+                            </li>
+
+                            <!-- Link to Flight Details page -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'index' %}">Flights</a>  <!-- 'index' points to the 'flight/' page -->
+                            </li>
+
+                            <!-- Link to Create New Passenger page -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'create_passenger' %}">Create Passenger</a>
+                            </li>
+                        </ul>
+
+                        <span class="navbar-text">
+                            Current Time: <span id="current-time">{{ current_time }}</span>
+                        </span>
+                    </div>
+                </div>
+            </nav>
+
+            <script>
+                function updateTime() {
+                    let now = new Date();
+                    let timeString = now.getHours().toString().padStart(2, '0') + ":" +
+                                     now.getMinutes().toString().padStart(2, '0') + ":" +
+                                     now.getSeconds().toString().padStart(2, '0');
+                    document.getElementById("current-time").textContent = timeString;
+                }
+                setInterval(updateTime, 1000); // Update time every second
+            </script>
         {% block body %}
         {% endblock body %}
     </body>
