--- a/static/css/flight.css
+++ b/static/css/flight.css
@@ -122,3 +122,27 @@ th, td {
     vertical-align: middle;
 }
 
+.tagline {
+    text-align: center;
+    padding: 15px;
+    background-color: #263a57;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 0;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.image-container {
+    width: 100%;
+    height: calc(100vh - 70px);
+    overflow: hidden;
+    position: relative;
+}
+
+.background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
