--- a/flight/templates/flights/layout.html
+++ b/flight/templates/flights/layout.html
@@ -27,10 +27,12 @@
                                 <a class="nav-link" href="{% url 'index' %}">Flights</a>  <!-- 'index' points to the 'flight/' page -->
                             </li>
 
-                            <!-- Link to Create New Passenger page -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'create_passenger' %}">Create Passenger</a>
-                            </li>
+                            <!-- Link to Create New Passenger page for staff member-->
+                            {% if request.user.is_staff %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'create_passenger' %}">Create Passenger</a>
+                                </li>
+                            {% endif %}
                         </ul>
 
                         <span class="navbar-text">
