--- a/flight/templates/flights/layout.html
+++ b/flight/templates/flights/layout.html
@@ -1,13 +1,13 @@
 {% load static %}
 
 <html lang = "en">
-    <head> 
+    <head>
         <title>Flights</title>
         <link rel = "stylesheet", href = "{% static 'css/flight.css' %}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </head>
-    <body style="background-color: #53b7f1">
+    <body style="background-color: #4682B4">
         <!-- Navbar -->
             <nav class="navbar navbar-expand-lg bg-body-tertiary" style="margin-top: 5px">
                 <div class="container-fluid">
@@ -33,8 +33,20 @@
                                     <a class="nav-link" href="{% url 'create_passenger' %}">Create Passenger</a>
                                 </li>
                             {% endif %}
+
+                            {% if request.user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'logout' %}" style="background-color: #4682B4; border-radius: 5px">Logout</a>
+                                </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'login' %}" style="background-color: #3CB371; border-radius: 5px">Login</a>
+                            </li>
+                            {% endif %}
                         </ul>
 
+
+<!--                        Added Content-->
                         <span class="navbar-text">
                             Current Time: <span id="current-time">{{ current_time }}</span>
                         </span>
